--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,6 +1,6 @@
 @import "../../scss/colors.scss";
 header {
-  position: absolute;
+  // position: absolute;
   width: 100%;
   height: 9.6875rem;
   background-color: rgba(255, 255, 255, 0.8);
