--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -6,7 +6,14 @@
   align-items: center;
   margin: 1rem;
   .icon {
-    margin: 1rem;
+    width: 4.0625rem;
+    height: 4.0625rem;
+  }
+  .img {
+    margin: 2rem;
+  }
+  .iconDiv {
+    margin-bottom: 1rem;
     .titleCard {
       font-size: 1.7em;
       background: -webkit-linear-gradient(-90deg, #0090e8 0%, #0de3ff 100%);
@@ -34,7 +41,6 @@
         margin: 0.8rem;
       }
       .line {
-        z-index: 1;
         width: 5.625rem;
         height: 2px;
         border: 2px solid #0090e8;
