--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,6 +1,21 @@
-// @import "../../scss/colors.scss";
-// footer {
-//   width: 100%;
-//   height: 9.6875rem;
-//   background-color: $primary3;
-// }
+@import "../../scss/colors.scss";
+footer {
+  width: 100%;
+  height: 9.6875rem;
+  background-color: $primary3;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  align-items: center;
+  .text {
+    text-align: center;
+    color: $white;
+  }
+  .divList {
+    ul {
+      margin: auto;
+      color: $white;
+      list-style: none;
+    }
+  }
+}
