--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,6 +1,6 @@
 @import "../../scss/colors.scss";
 header {
-  // position: absolute;
+  position: absolute;
   width: 100%;
   height: 9.6875rem;
   background-color: rgba(255, 255, 255, 0.8);
@@ -28,6 +28,53 @@ header {
           font-weight: bolder;
           color: $primary2;
         }
+      }
+    }
+    .menuResponsive {
+      display: none;
+      color: $primary;
+    }
+  }
+}
+@media only screen and (max-width: 960px) {
+  header {
+    .navBar {
+      padding: 0;
+      .logo {
+        margin: 1rem;
+      }
+      .linksMenu {
+        position: fixed;
+        height: 100vh;
+        right: 0;
+        width: 100%;
+        z-index: 1;
+        flex-direction: column;
+        transition: all 1s ease;
+        background: -webkit-linear-gradient(to right, $primary, $primary2);
+        /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to right, $primary, $primary2);
+      }
+      .menuResponsive {
+        display: flex;
+        justify-content: center;
+        height: 4.375rem;
+        align-items: center;
+        color: $primary;
+        background: transparent;
+        z-index: 100;
+        cursor: pointer;
+        padding: 1.25rem;
+        margin-right: 2.5rem;
+        font-size: 1.3rem;
+      }
+      .one {
+        -webkit-clip-path: circle(0% at 100% 0%);
+        clip-path: circle(0% at 100% 0%);
+      }
+      .two {
+        -webkit-clip-path: circle(150% at 100% 0%);
+        clip-path: circle(150% at 100% 0%);
       }
     }
   }
