--- a/src/sections/About/About.scss
+++ b/src/sections/About/About.scss
@@ -1,5 +1,73 @@
-.sectionAbout {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
+@import "../../scss/breakpoints.scss";
+
+.section-about {
+	text-align: center;
+
+	.container-about {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-around;
+
+		div {
+			width: 40%;
+			height: auto;
+			margin: 4em;
+		}
+
+		.r-col {
+			display: flex;
+			flex-direction: column;
+			justify-content: flex-start;
+			width: 600px;
+
+			p {
+				margin-top: 3em;
+				font-size: 24px;
+			}
+		}
+	}
+	.sectionAbout {
+		display: flex;
+		flex-flow: row wrap;
+		justify-content: center;
+	}
+}
+
+@media (max-width: $breakpoint-l) {
+	.section-about {
+		display: flex;
+		flex-direction: column;
+		text-align: center;
+		justify-content: center;
+
+		.container-about {
+			margin-top: 40px;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+
+			div {
+				width: 80%;
+				height: auto;
+				margin: 0;
+			}
+
+			.image {
+				width: 80%;
+			}
+
+			.r-col {
+				display: flex;
+				flex-direction: row;
+				justify-content: center;
+				width: 80%;
+
+				p {
+					margin-top: 3em;
+					font-size: 24px;
+				}
+			}
+		}
+	}
 }
