--- a/src/components/TitleSection/TitleSection.scss
+++ b/src/components/TitleSection/TitleSection.scss
@@ -1,8 +1,16 @@
-.title-container {
-	border-bottom: 1px solid $primary;
-	border-color: $primary;
+@import "../../scss/colors.scss";
+.container {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
 
-	.title-name {
-		font-size: 20px;
+	.title-container {
+		width: fit-content;
+		border-color: $primary;
+		border-bottom: 4px solid $primary;
+
+		.title-name {
+			font-size: 28px;
+		}
 	}
 }
