--- a/src/sections/Solutions/Solutions.scss
+++ b/src/sections/Solutions/Solutions.scss
@@ -1,7 +1,9 @@
 .sectionSolutions {
-  margin: auto;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  width: 90%;
+  .divCardsSolutions {
+    margin: auto;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    width: 90%;
+  }
 }
