--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,20 +1,21 @@
 .button-container {
-	max-width: 300px;
-	max-height: 63px;
-	width: 80%;
+  max-width: 300px;
+  max-height: 63px;
+  width: 80%;
+  margin-top: 1rem;
 
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 
-	color: white;
-	border-radius: 6px;
-	background: linear-gradient(180deg, #0090e8 0%, #0de3ff 100%);
+  color: white;
+  border-radius: 6px;
+  background: linear-gradient(180deg, #0090e8 0%, #0de3ff 100%);
 
-	.button-name {
-		padding: 10px;
-		font-size: 22px;
-		font-weight: 2px;
-	}
+  .button-name {
+    padding: 10px;
+    font-size: 22px;
+    font-weight: 2px;
+  }
 }
