--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -23,7 +23,6 @@
     }
   }
   .linearGradient {
-    padding: 1rem;
     border-radius: 1.25rem;
     background: linear-gradient(180deg, #0090e8 0%, #ffffff 90%);
     padding: 2px;
@@ -37,13 +36,14 @@
       border-radius: 1.25rem;
       font-size: 1.5em;
       padding: 2rem;
+      height: 25rem;
       p {
         margin: 0.8rem;
       }
       .line {
         width: 5.625rem;
         height: 2px;
-        border: 2px solid #0090e8;
+        border: 2px solid $primary;
       }
     }
   }
