--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,4 +1,5 @@
 @import "../../scss/colors.scss";
+@import "../../scss/breakpoints.scss";
 footer {
   width: 100%;
   height: 9.6875rem;
@@ -12,10 +13,40 @@ footer {
     color: $white;
   }
   .divList {
-    ul {
-      margin: auto;
-      color: $white;
-      list-style: none;
+    display: flex;
+    align-items: center;
+    .imgList {
+      display: flex;
+      flex-flow: column wrap;
+      img {
+        margin: 0.2rem;
+      }
     }
+    .list {
+      color: $white;
+      p {
+        margin: 0.5rem;
+      }
+    }
+  }
+  .iconWsp {
+    position: fixed;
+    right: 5%;
+    bottom: 5%;
+    width: 5rem;
+    height: 5rem;
+    img {
+      cursor: pointer;
+      &:hover {
+        transition: 0.5s;
+        opacity: 50%;
+      }
+    }
+  }
+}
+
+@media (max-width: $breakpoint-l) {
+  footer {
+    height: auto;
   }
 }
