--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,8 +1,9 @@
 @import "../../scss/colors.scss";
 header {
-  position: absolute;
+  position: fixed;
+  top: 0;
+  z-index: 1;
   width: 100%;
-  height: 9.6875rem;
   background-color: rgba(255, 255, 255, 0.8);
   .navBar {
     padding: 2.25rem 6.25rem;
@@ -14,7 +15,6 @@ header {
     }
     .linksMenu {
       display: flex;
-      height: 100%;
       width: 50%;
       justify-content: space-around;
       align-items: center;
