--- a/src/sections/Home/Home.scss
+++ b/src/sections/Home/Home.scss
@@ -2,93 +2,94 @@
 @import "../../scss/breakpoints.scss";
 
 .home-container {
-	display: flex;
-	flex-direction: row;
-	height: 100vh;
-	background: linear-gradient(
-		180deg,
-		#c9ffee -100%,
-		rgba(255, 255, 255, 0) 100%
-	);
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
+  background: linear-gradient(
+    180deg,
+    #76f7ce -100%,
+    rgba(255, 255, 255, 0) 100%
+  );
 
-	.title {
-		p {
-			margin: 0;
-			font-size: 46px;
-			color: $primary;
-		}
-		h1 {
-			margin: 0;
-			font-size: 46px;
-			color: $primary;
-		}
-	}
-	.text {
-		p {
-			font-size: 28px;
-		}
-	}
+  .title {
+    p {
+      margin: 0;
+      font-size: 46px;
+      color: $primary;
+    }
+    h1 {
+      margin: 0;
+      font-size: 46px;
+      color: $primary;
+    }
+  }
+  .text {
+    p {
+      font-size: 28px;
+    }
+  }
 
-	.text-container {
-		margin-top: 10%;
-		margin-left: 10%;
+  .text-container {
+    margin-top: 15%;
+    margin-left: 10%;
 
-		.text {
-			width: 600px;
-		}
-	}
+    .text {
+      padding: 1rem;
+      width: 600px;
+    }
+  }
 
-	.tablet {
-		position: absolute;
-		top: 30%;
-		right: 0%;
-		max-height: auto;
-		max-width: 100vw;
-		z-index: 0;
-		transform: skewY(14deg);
-	}
+  .tablet {
+    position: absolute;
+    top: 30%;
+    right: 0%;
+    max-height: auto;
+    max-width: 100vw;
+    z-index: 0;
+    transform: skewY(14deg);
+  }
 }
 
 @media (max-width: $breakpoint-xs) {
-	.home-container {
-		.title {
-			margin-top: 20%;
-			p {
-				margin: 0;
-				font-size: 2em;
-				color: $primary;
-			}
-			h1 {
-				margin: 0;
-				font-size: 2em;
-				color: $primary;
-			}
-		}
-		.text {
-			p {
-				font-size: 1em;
-			}
-		}
+  .home-container {
+    .title {
+      margin-top: 20%;
+      p {
+        margin: 0;
+        font-size: 2em;
+        color: $primary;
+      }
+      h1 {
+        margin: 0;
+        font-size: 2em;
+        color: $primary;
+      }
+    }
+    .text {
+      p {
+        font-size: 1em;
+      }
+    }
 
-		.text-container {
-			width: 80%;
-			height: 300px;
-			margin-top: 10%;
-			margin-left: 10%;
-			margin-right: 10%;
+    .text-container {
+      width: 80%;
+      height: 300px;
+      margin-top: 10%;
+      margin-left: 10%;
+      margin-right: 10%;
 
-			.text {
-				margin-top: 30px;
-				margin-bottom: 30px;
-				width: 300px;
-			}
-		}
-	}
+      .text {
+        margin-top: 30px;
+        margin-bottom: 30px;
+        width: 300px;
+      }
+    }
+  }
 
-	#tablet {
-		display: none;
-	}
-	.hero {
-		display: none;
-	}
+  #tablet {
+    display: none;
+  }
+  .hero {
+    display: none;
+  }
 }
