--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,4 +1,5 @@
 @import "../../scss/colors.scss";
+@import "../../scss/breakpoints.scss";
 header {
   position: fixed;
   top: 0;
@@ -24,15 +25,28 @@ header {
         transition: 0.2s;
         color: $black;
         text-decoration: none;
+        border-top: 1px solid transparent;
+        border-bottom: 1px solid transparent;
         &:hover {
           font-weight: bolder;
           color: $primary2;
+          border-top: 1px solid $primary2;
+          border-bottom: 1px solid $primary2;
         }
       }
     }
     .menuResponsive {
       display: none;
       color: $primary;
+    }
+  }
+}
+@media only screen and (max-width: $breakpoint-xl) {
+  header {
+    .navBar {
+      .linksMenu {
+        width: auto;
+      }
     }
   }
 }
@@ -58,15 +72,18 @@ header {
       .menuResponsive {
         display: flex;
         justify-content: center;
-        height: 4.375rem;
+        height: 5.375rem;
         align-items: center;
-        color: $primary;
+        color: $primary3;
         background: transparent;
         z-index: 100;
         cursor: pointer;
         padding: 1.25rem;
         margin-right: 2.5rem;
-        font-size: 1.3rem;
+        font-size: 1.8rem;
+        &:active {
+          color: $white;
+        }
       }
       .one {
         -webkit-clip-path: circle(0% at 100% 0%);
