--- a/src/sections/Home/Home.scss
+++ b/src/sections/Home/Home.scss
@@ -38,18 +38,71 @@
       width: 600px;
     }
   }
-
   .tablet {
     position: absolute;
+    transition: 0.5s;
     top: 30%;
     right: 0%;
-    max-height: auto;
-    max-width: 100vw;
+    width: 60%;
     z-index: 0;
     transform: skewY(14deg);
   }
+  .hero {
+    position: absolute;
+    transition: 0.5s;
+    right: 0%;
+    width: 80%;
+    // height: 90%;
+    z-index: -2;
+  }
 }
 
+@media (max-width: $breakpoint-xl) {
+  .home-container {
+    .images {
+      .tablet {
+        transition: 0.5s;
+        top: 45%;
+      }
+      .hero {
+        transition: 0.5s;
+        right: 0%;
+      }
+    }
+  }
+}
+@media (max-width: $breakpoint-l) {
+  .home-container {
+    justify-content: center;
+    .text-container {
+      display: flex;
+      flex-direction: column;
+      .text {
+        width: 30rem;
+      }
+    }
+    .images {
+      .tablet {
+        transition: 0.5s;
+        top: 60%;
+        right: 20%;
+      }
+      .hero {
+        display: none;
+      }
+    }
+  }
+}
+@media (max-width: $breakpoint-m) {
+  .home-container {
+    height: 80vh;
+    .images {
+      .tablet {
+        display: none;
+      }
+    }
+  }
+}
 @media (max-width: $breakpoint-xs) {
   .home-container {
     .title {
@@ -79,8 +132,6 @@
       margin-right: 10%;
 
       .text {
-        margin-top: 30px;
-        margin-bottom: 30px;
         width: 300px;
       }
     }
