--- a/src/sections/Tools/Tools.scss
+++ b/src/sections/Tools/Tools.scss
@@ -1,3 +1,5 @@
+@import "../../scss/colors.scss";
+@import "../../scss/breakpoints.scss";
 .sectionTools {
   margin: 2rem;
   .toolsCards {
@@ -29,8 +31,19 @@
         padding: 0%;
         width: 8.625rem;
         height: 2px;
-        border: 2px solid #0090e8;
+        border: 2px solid $primary;
       }
     }
   }
 }
+@media (max-width: $breakpoint-s) {
+  .sectionTools {
+    .videoAndText {
+      .text {
+        width: 34.375rem;
+        font-size: 1em;
+        line-height: 1em;
+      }
+    }
+  }
+} ;
