--- a/src/components/TitleSection/TitleSection.scss
+++ b/src/components/TitleSection/TitleSection.scss
@@ -1,16 +1,25 @@
 @import "../../scss/colors.scss";
 .container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
 
-  .title-container {
-    width: fit-content;
-    border-color: $primary;
-    border-bottom: 4px solid $primary;
+	.title-container {
+		//	width: fit-content;
+		//display: flex;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
 
-    .title-name {
-      font-size: 28px;
-    }
-  }
+		.title-name {
+			font-size: 28px;
+		}
+
+		span {
+			display: block;
+			width: 90px;
+			border-top: 4px solid $primary;
+			margin-top: 8px;
+		}
+	}
 }
