--- a/src/sections/Process/Process.scss
+++ b/src/sections/Process/Process.scss
@@ -1,15 +1,34 @@
 @import "../../scss/breakpoints.scss";
+@import "../../scss/colors.scss";
 
 .process-section {
-	height: 100vh;
+	height: fit-content;
+	margin-top: 80px;
+	display: flex;
+	flex-direction: column;
+	align-content: center;
+	justify-content: center;
 
-	div {
+	.image-container {
+		text-align: center;
+		img {
+			margin: 100px;
+		}
+	}
+
+	.list-container {
+		width: 90%;
 		display: flex;
 		flex-direction: row;
 		justify-content: center;
+		align-self: center;
 
-		img {
-			margin: 100px;
+		.vertical-line {
+			border-left: 4px solid $primary3;
+			border-width: 1px solid;
+			margin-right: 30px;
+			height: 236px;
+			margin-top: 130px;
 		}
 	}
 }
@@ -28,5 +47,9 @@
 				max-width: 80%;
 			}
 		}
+	}
+
+	.vertical-line {
+		display: none;
 	}
 } ;
