--- a/src/components/TitleSection/TitleSection.scss
+++ b/src/components/TitleSection/TitleSection.scss
@@ -3,14 +3,20 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-
+  padding: 2rem;
   .title-container {
-    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     border-color: $primary;
-    border-bottom: 4px solid $primary;
 
     .title-name {
       font-size: 28px;
+    }
+    .line {
+      width: 5.625rem;
+      height: 2px;
+      border: 2px solid $primary;
     }
   }
 }
