--- a/src/sections/About/About.scss
+++ b/src/sections/About/About.scss
@@ -23,6 +23,7 @@
       p {
         margin-top: 3em;
         font-size: 24px;
+        text-align: start;
       }
     }
   }
@@ -65,7 +66,8 @@
 
         p {
           margin-top: 3em;
-          font-size: 24px;
+          font-size: 16px;
+          text-align: start;
         }
       }
     }
