--- a/src/sections/Contact/Contact.scss
+++ b/src/sections/Contact/Contact.scss
@@ -1,73 +1,73 @@
 .contactSection {
-	background-image: url("../../assets/images/FondoGenz.PNG");
-	background-repeat: no-repeat;
-	background-size: cover;
-	width: 100%;
+  background-image: url("../../assets/images/FondoGenzFlip.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
 
-	.container {
-		display: flex;
-		flex-direction: row;
+  .container {
+    display: flex;
+    flex-direction: row;
 
-		margin-top: 60px;
+    margin-top: 150px;
 
-		.form {
-			display: flex;
-			flex-direction: column;
-			align-content: flex-end;
+    .form {
+      display: flex;
+      flex-direction: column;
+      align-content: flex-end;
 
-			.inputContainer {
-				display: flex;
-				flex-direction: row;
-				justify-content: flex-end;
-				margin: 20px;
+      .inputContainer {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        margin: 20px;
 
-				.col-l {
-					display: flex;
-					flex-direction: column;
-					justify-content: space-between;
-					width: 40%;
+        .col-l {
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          width: 40%;
 
-					input {
-						padding: 8px;
-						border-radius: 10px;
-						width: 290px;
-						height: 48px;
-						border-width: 0px;
-						margin-right: 30px;
-					}
-				}
-				.col-r {
-					textarea {
-						width: 500px;
-						height: 344px;
-						resize: none;
-						border-radius: 8px;
-						border-width: 0px;
-					}
-				}
-			}
-			.button {
-				height: 63px;
-				width: 110px;
-				// left: 808px;
-				// top: 581px;
-				border-radius: 6px;
-				// margin-right: 20px;
-				padding: 15px, 20px, 15px, 20px;
-				align-self: flex-end;
-			}
-		}
+          input {
+            padding: 8px;
+            border-radius: 10px;
+            width: 290px;
+            height: 48px;
+            border-width: 0px;
+            margin-right: 30px;
+          }
+        }
+        .col-r {
+          textarea {
+            width: 500px;
+            height: 344px;
+            resize: none;
+            border-radius: 8px;
+            border-width: 0px;
+          }
+        }
+      }
+      .button {
+        height: 63px;
+        width: 110px;
+        // left: 808px;
+        // top: 581px;
+        border-radius: 6px;
+        // margin-right: 20px;
+        padding: 15px, 20px, 15px, 20px;
+        align-self: flex-end;
+      }
+    }
 
-		.info {
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			color: white;
+    .info {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      color: white;
 
-			p {
-				font-size: 24px;
-				width: 70%;
-			}
-		}
-	}
+      p {
+        font-size: 24px;
+        width: 70%;
+      }
+    }
+  }
 }
