--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -45,6 +45,9 @@
         height: 2px;
         border: 2px solid $primary;
       }
+      .list {
+        margin-top: 1rem;
+      }
     }
   }
 }
