--- a/src/components/ButtonGeneral/ButtonGeneral.scss
+++ b/src/components/ButtonGeneral/ButtonGeneral.scss
@@ -1,15 +1,15 @@
 @import "../../scss/colors.scss";
 
 .button-general {
-	color: white;
-	background-color: $primary3;
-	text-align: center;
-	border-radius: 10px;
-	border-width: 0px;
-	font-weight: bold;
+  color: white;
+  background: linear-gradient(180deg, #104a9e 0%, #0090e8 100%);
+  text-align: center;
+  border-radius: 10px;
+  border-width: 0px;
+  font-weight: bold;
 
-	p {
-		font-weight: bold;
-		font-size: 24px;
-	}
+  p {
+    font-weight: bold;
+    font-size: 24px;
+  }
 }
