--- a/src/components/ListCard/ListCard.scss
+++ b/src/components/ListCard/ListCard.scss
@@ -1,36 +1,107 @@
 @import "../../scss/colors.scss";
-
+@import "../../scss/breakpoints.scss";
 .list-card {
-	display: flex;
-	flex-direction: column;
-	margin: 10px 20px;
+  display: flex;
+  flex-direction: column;
+  margin: 10px 20px;
 
-	.title-container {
-		display: flex;
-		flex-direction: row;
-		justify-content: center;
-		.title {
-			margin-bottom: 12px;
-			justify-self: center;
+  .title-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    .title {
+      margin-bottom: 12px;
+      justify-self: center;
 
-			font-size: 46px;
-			background: linear-gradient(180deg, #0090e8 0%, #0de3ff 100%);
-			background-clip: border-box;
-			-webkit-background-clip: text;
-			-webkit-text-fill-color: transparent;
-		}
-	}
+      font-size: 46px;
+      background: linear-gradient(180deg, #0090e8 0%, #0de3ff 100%);
+      background-clip: border-box;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+    .imagen-procesos {
+      display: none;
+    }
+    .title-responsive {
+      display: none;
+    }
+  }
 
-	.list-container {
-		margin-top: 30px;
-		display: flex;
-		flex-direction: row;
-		.list {
-			height: auto;
-			.item {
-				margin: 8px 0px;
-				font-size: 24px;
-			}
-		}
-	}
+  .list-container-list {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: row;
+    .list {
+      height: auto;
+      .item {
+        margin: 8px 0px;
+        font-size: 24px;
+      }
+    }
+  }
 }
+@media (max-width: $breakpoint-l) {
+  .list-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+    .list-container-list {
+      .list {
+        .item {
+          font-size: 20px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: $breakpoint-m) {
+  .list-card {
+    .title-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      .imagen-procesos {
+        display: block;
+        margin: 1.5rem;
+      }
+      .title {
+        display: none;
+      }
+      .title-responsive {
+        display: block;
+        font-size: 1.5em;
+        color: $primary3;
+      }
+    }
+
+    .list-container-list {
+      width: 20rem;
+      height: 18rem;
+      padding: 1rem;
+      border-right: 4px solid #0090e8;
+      border-left: 4px solid #0090e8;
+      text-align: start;
+      ul {
+        list-style-position: inside;
+      }
+    }
+  }
+}
+@media (max-width: $breakpoint-s) {
+  .list-card {
+    .title-container {
+      .imagen-procesos {
+        width: 15rem;
+      }
+    }
+    .list-container-list {
+      .list {
+        .item {
+          font-size: 16px;
+        }
+      }
+    }
+  }
+} ;
