--- a/src/components/TitleSection/TitleSection.scss
+++ b/src/components/TitleSection/TitleSection.scss
@@ -3,10 +3,10 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-
+  padding-top: 1.5rem;
   .title-container {
     //	width: fit-content;
-    //display: flex;
+    // display: flex;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,11 +15,11 @@
       font-size: 28px;
     }
 
-    span {
+    .line {
       display: block;
       width: 90px;
       border-top: 4px solid $primary;
-      margin-top: 8px;
+      // margin-top: 8px;
     }
   }
 }
