--- a/src/sections/Process/Process.scss
+++ b/src/sections/Process/Process.scss
@@ -2,54 +2,65 @@
 @import "../../scss/colors.scss";
 
 .process-section {
-	height: fit-content;
-	margin-top: 80px;
-	display: flex;
-	flex-direction: column;
-	align-content: center;
-	justify-content: center;
+  height: fit-content;
+  margin-top: 80px;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
 
-	.image-container {
-		text-align: center;
-		img {
-			margin: 100px;
-		}
-	}
+  .image-container {
+    text-align: center;
+    img {
+      margin: 100px;
+    }
+  }
 
-	.list-container {
-		width: 90%;
-		display: flex;
-		flex-direction: row;
-		justify-content: center;
-		align-self: center;
+  .list-container {
+    width: 90%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-self: center;
 
-		.vertical-line {
-			border-left: 4px solid $primary3;
-			border-width: 1px solid;
-			margin-right: 30px;
-			height: 236px;
-			margin-top: 130px;
-		}
-	}
+    .vertical-line {
+      border-left: 4px solid $primary3;
+      border-width: 1px solid;
+      margin-right: 30px;
+      height: 236px;
+      margin-top: 130px;
+    }
+  }
 }
 
 @media (max-width: $breakpoint-l) {
-	.process-section {
-		height: 100vh;
+  .process-section {
+    // height: 100vh;
 
-		div {
-			display: flex;
-			flex-direction: row;
-			justify-content: center;
+    div {
+      display: flex;
+      flex-direction: column;
 
-			img {
-				margin: 100px;
-				max-width: 80%;
-			}
-		}
-	}
-
-	.vertical-line {
-		display: none;
-	}
-} ;
+      img {
+        // margin: 100px;
+        max-width: 80%;
+      }
+    }
+  }
+}
+@media (max-width: $breakpoint-m) {
+  .process-section {
+    .image-container {
+      display: none;
+    }
+    .list-container {
+      width: 90%;
+      display: flex;
+      flex-direction: column;
+      align-self: center;
+      .vertical-line {
+        display: none;
+      }
+    }
+  }
+}
