--- a/src/components/ButtonGeneral/ButtonGeneral.scss
+++ b/src/components/ButtonGeneral/ButtonGeneral.scss
@@ -10,6 +10,22 @@
   width: 110px;
   height: 63px;
   padding: 15px, 20px;
+  overflow: hidden;
+  cursor: pointer;
+
+  &:disabled {
+    background: grey;
+  }
+  &:hover {
+    color: #8cc0e0;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+  &:focus {
+    color: $white;
+    background: linear-gradient(180deg, #0090e8 0%, #0de3ff 100%);
+    transition: all 0.2s ease-out;
+  }
+
   p {
     font-weight: bold;
     font-size: 24px;
