--- a/src/sections/Process/Process.scss
+++ b/src/sections/Process/Process.scss
@@ -12,7 +12,8 @@
   .image-container {
     text-align: center;
     img {
-      margin: 100px;
+      width: 80%;
+      margin: 5rem;
     }
   }
 
