--- a/src/sections/WhyGenz/WhyGenz.scss
+++ b/src/sections/WhyGenz/WhyGenz.scss
@@ -4,7 +4,7 @@
 .section-why {
   background-image: url("../../assets/images/FondoGenz.PNG");
   background-repeat: no-repeat;
-  // background-size: cover;
+  background-size: cover;
   width: 100%;
   .container-why {
     display: flex;
@@ -15,7 +15,7 @@
       display: flex;
       flex-direction: column;
       img {
-        width: 96%;
+        // width: 96%;
       }
     }
     .r-col {
