--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,4 +1,5 @@
 @import "../../scss/breakpoints.scss";
+@import "../../scss/colors.scss";
 .button-container {
   max-width: 300px;
   max-height: 63px;
@@ -15,6 +16,10 @@
   border-radius: 6px;
   background: linear-gradient(180deg, #0090e8 0%, #0de3ff 100%);
 
+  &:hover {
+    color: #e0e0e0;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
   .button-name {
     padding: 10px;
     font-size: 22px;
