--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -45,13 +45,13 @@ footer {
   }
 }
 
-@media (max-width: $breakpoint-l) {
+@media only screen and (max-width: $breakpoint-l) {
   footer {
     height: auto;
     padding: 2rem;
   }
 }
-@media (max-width: $breakpoint-m) {
+@media only screen and (max-width: $breakpoint-m) {
   footer {
     .iconWsp {
       width: 3rem;
@@ -60,7 +60,7 @@ footer {
   }
 }
 
-@media (max-width: $breakpoint-s) {
+@media only screen and (max-width: $breakpoint-s) {
   footer {
     .logoBlanco {
       width: 10rem;
