--- a/src/sections/Contact/Contact.scss
+++ b/src/sections/Contact/Contact.scss
@@ -92,7 +92,7 @@
   }
 }
 
-@media (max-width: $breakpoint-l) {
+@media only screen and (max-width: $breakpoint-l) {
   .contactSection {
     background: $gradientPrimary;
     width: 100%;
@@ -152,8 +152,7 @@
     }
   }
 }
-
-@media (max-width: $breakpoint-s) {
+@media only screen and (max-width: $breakpoint-s) {
   .contactSection {
     .container-form {
       .form {
