--- a/src/sections/Home/Home.scss
+++ b/src/sections/Home/Home.scss
@@ -77,7 +77,8 @@
     .images {
       .tablet {
         transition: 0.5s;
-        top: 45%;
+        top: 55%;
+        width: 50%;
       }
       .hero {
         transition: 0.5s;
